src/test/deca/context/invalid/Obj/decl-field-typeinconnu.deca
// Description:
//    Déclaration d'un champ de type non défini
//
// Résultat:
//Le type du champ n'est pas défini
//
class A {
    champ a;
}
{}